# fleet-formation-protocol

./: README.md  TASK.md  pyproject.toml
src/fleet_formation_protocol/: __init__.py  agent.py  auction.py  formation.py  message.py  protocol.py  types.py
src/fleet_formation_protocol.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_protocol.py
