[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fleet-formation-protocol"
version = "0.1.0"
description = "Fleet Formation Protocol — self-organizing agent groups for the Cocapn fleet"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [{name = "Oracle1", email = "oracle1@cocapn.ai"}]
keywords = ["fleet", "formation", "agents", "cocapn", "plato", "protocol"]

[project.urls]
Homepage = "https://github.com/cocapn/fleet-formation-protocol"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
